# helixplot

./: .gitignore  FEATURES.md  app-ads.txt  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
_legacy_react/: capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
_legacy_react/src/: App.tsx  index.css  main.tsx
android/: gradle.properties
android/app/: build.gradle
helix-core-rs/: Cargo.toml
helix-core-rs/src/: lib.rs
ios/: ExportOptions.plist
public/: manifest.webmanifest
scripts/: add-statusbar.ts  capture-screenshots.mjs  deploy-ios.sh  generate-screenshots.ts  generate-store-assets.mjs
src/: App.tsx  i18n.ts  index.css  main.tsx
src/components/: AdBanner.tsx  AppShell.tsx  Editor.tsx  EquationEditorModal.tsx  ErrorBoundary.tsx  ExportModal.tsx  GuideLines.tsx  HistoryPanel.tsx  InputPanel.tsx  Layout.tsx  MathLiveInput.tsx  MobileSheet.tsx  Onboarding.tsx  ParameterSlider.tsx  PlaybackBar.tsx  Renderers.tsx  SettingsModal.tsx  SplashScreen.tsx  Toast.tsx  TopBar.tsx  Viewport.tsx
src/core/: Evaluator.ts  Sampler.ts  WasmEvaluator.ts  types.ts
src/fit/: computeBounds.ts
src/hooks/: useHelixState.ts  useInterstitialAd.ts  useMathWorker.ts  usePlaybackRuntime.ts
src/locales/: en.json  ko.json
src/presets/: corePresets.ts
src/services/: AdService.ts
src/store/: historyStore.ts  useAppStore.ts
src/utils/: export.ts  latexToExpr.ts
src/worker/: math.worker.ts
tests/core/: Evaluator.test.ts  ExpressionParser.test.ts  Sampler.test.ts  (+1 more)
(+48 files in other folders)
