[package]
name = "helix-core-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
num-complex = "0.4"
# For parsing, we might use 'meval' or similar, but for complex flow maybe 'fend-core' or custom? 
# For this PoC, let's stick to basic evaluation or hardcoded for efficiency demo.
# Using 'evalexpr' is good but complex numbers support varies.
